# source-inspector

./: .clang-format  CMakeLists.txt  README.md  productVersion.h.in  projectVersion.cmake
src/: CMakeLists.txt
src/app/: Application.cpp  CMakeLists.txt  ConfigManager.cpp  Version.cpp  Version.h  includesLinux.h  includesWindows.h  main.cpp  utilityPathDetection.cpp
src/app/commandline/: CommandLineParser.cpp  CommandLineParser.h
src/app/commandline/commands/: CommandlineCommandConfig.cpp
src/app/component/: ComponentManager.cpp
src/app/component/controller/: CodeController.cpp  GraphController.cpp  IDECommunicationController.cpp  SearchController.cpp  StatusBarController.cpp
src/app/component/controller/helper/: BucketLayouter.cpp  BucketLayouter.h  DummyEdge.h  DummyNode.h  ListLayouter.cpp  ListLayouter.h  NetworkProtocolHelper.cpp  TrailLayouter.cpp  TrailLayouter.h
src/app/component/view/: GraphView.h  GraphViewStyle.cpp
src/app/data/fulltextsearch/: FullTextSearchIndex.cpp
src/app/data/graph/: Graph.cpp
src/app/data/indexer/: CombinedIndexerCommandProvider.cpp  CxxIndexerCommandProvider.cpp  Indexer.h  IndexerCommandType.cpp  IndexerCommandType.h  IndexerComposite.cpp  TaskBuildIndex.cpp  TaskFillIndexerCommandQueue.cpp
src/app/data/indexer/interprocess/: InterprocessIndexer.cpp  InterprocessIndexerCommandManager.cpp  InterprocessIndexingStatusManager.cpp  InterprocessIntermediateStorageManager.cpp
src/app/data/location/: SourceLocationCollection.cpp
src/app/data/name/: NameElement.cpp
src/app/data/parser/cxx/: CanonicalFilePathCache.cpp  ClangInvocationInfo.cpp  (+7 more)
src/app/data/search/: SearchMatch.cpp
src/app/data/storage/: PersistentStorage.cpp  Storage.cpp  StorageAccessProxy.cpp  StorageProvider.cpp
src/app/data/tooltip/: TooltipInfo.h
src/app/file/: FilePath.cpp  utilityFile.cpp
src/app/interprocess/: SharedMemory.cpp  SharedMemoryGarbageCollector.cpp
src/app/logging/: FileLogger.cpp
src/app/messaging/type/: MessageLogFilterChanged.h
src/app/path_detector/cxx_header/: CxxVs10To14HeaderPathDetector.cpp
src/app/paths/: AppPath.cpp  AppPath.h
src/app/project/: Project.cpp  SourceGroupCxxCdb.cpp  SourceGroupCxxEmpty.cpp  utilitySourceGroupCxx.cpp
src/app/qt/: QtApplication.cpp
src/app/qt/element/: QtTabBar.cpp
src/app/qt/network/: QtTcpWrapper.cpp
src/app/qt/project_wizard/: QtProjectWizard.cpp
src/app/qt/utility/: QtHighlighter.cpp
src/app/qt/view/: QtGraphView.cpp  QtGraphView.h
src/app/qt/window/: QtPreferencesWindow.cpp  QtStartScreen.cpp
src/app/scheduling/: Blackboard.h  TaskRunner.cpp
src/app/settings/: ApplicationSettings.cpp  ApplicationSettingsPrefiller.cpp  LanguageType.h  ProjectSettings.cpp  ProjectSettings.h  Settings.cpp
src/app/settings/source_group/: SourceGroupStatusType.cpp  SourceGroupType.cpp  SourceGroupType.h
src/app/text/: TextAccess.cpp
src/indexer/: Application.cpp  Application.h  CMakeLists.txt  CompilationDatabase.cpp  includes.h  includesWindows.h  main.cpp  utility.h  utilityApp.cpp  utilityPathDetection.cpp
src/indexer/codeblocks/: CodeblocksProject.cpp
src/indexer/component/: ComponentManager.cpp
src/indexer/component/controller/: BookmarkController.cpp  CodeController.cpp  GraphController.cpp  GraphController.h  IDECommunicationController.cpp  SearchController.cpp  StatusBarController.cpp
src/indexer/component/view/: GraphView.cpp  GraphView.h  GraphViewStyle.cpp  GraphViewStyle.h
src/indexer/data/: NodeTypeSet.cpp  NodeTypeSet.h
src/indexer/data/fulltextsearch/: FullTextSearchIndex.cpp
src/indexer/data/graph/: Edge.cpp  Graph.cpp  Node.cpp  Token.cpp
src/indexer/data/indexer/: CombinedIndexerCommandProvider.cpp  CxxIndexerCommandProvider.cpp  IndexerCommandCxx.cpp  IndexerCommandType.cpp  IndexerCommandType.h  TaskBuildIndex.cpp  TaskFillIndexerCommandQueue.cpp
src/indexer/data/location/: SourceLocationCollection.cpp
src/indexer/data/name/: NameElement.cpp  NameHierarchy.cpp
src/indexer/data/search/: SearchMatch.cpp
src/indexer/data/storage/: IntermediateStorage.cpp  IntermediateStorage.h  PersistentStorage.cpp  PersistentStorage.h  Storage.cpp  StorageAccessProxy.cpp  StorageProvider.cpp  StorageStats.h
src/indexer/data/tooltip/: TooltipInfo.h
src/indexer/file/: FilePath.cpp  utilityFile.cpp
src/indexer/interprocess/: SharedMemory.cpp  SharedMemoryGarbageCollector.cpp
src/indexer/messaging/: MessageListener.h  MessageQueue.cpp
src/indexer/path_detector/cxx_header/: CxxVs10To14HeaderPathDetector.cpp
src/indexer/paths/: AppPath.cpp
src/indexer/project/: Project.cpp  SourceGroupCxxCdb.cpp  SourceGroupCxxEmpty.cpp
src/indexer/qt/graphics/: GraphFocusHandler.cpp  QtGraphicsView.cpp
src/indexer/qt/network/: QtRequest.cpp
src/indexer/qt/project_wizard/: QtProjectWizard.cpp  QtProjectWizardWindow.cpp
src/indexer/qt/utility/: QtContextMenu.cpp  QtFilesAndDirectoriesDialog.cpp  utilityQt.cpp
src/indexer/qt/view/: QtDialogView.cpp  QtErrorView.cpp  QtErrorView.h  QtGraphView.cpp  QtViewWidgetWrapper.cpp
src/indexer/qt/window/: QtAbout.cpp  QtBookmarkBrowser.cpp  QtLicenseWindow.cpp  QtMainWindow.cpp  QtPreferencesWindow.cpp  QtWindow.cpp  QtWindow.h
src/indexer/scheduling/: Blackboard.h  TaskScheduler.cpp
src/indexer/settings/: ApplicationSettings.cpp  ApplicationSettings.h  ApplicationSettingsPrefiller.cpp  LanguageType.cpp  ProjectSettings.cpp  ProjectSettings.h  Settings.cpp  Settings.h
src/indexer/settings/source_group/: SourceGroupStatusType.cpp  SourceGroupType.cpp  SourceGroupType.h
src/indexer/text/: TextAccess.cpp
src/indexer/utility/: utilityString.cpp
src/logging/: CMakeLists.txt  README.md
src/logging/include/logging/: ConsoleLogger.h  FileLogger.h  LogManager.h  LogManagerImplementation.h  LogMessage.h  Logger.h  logging.h
src/logging/src/: ConsoleLogger.cpp  FileLogger.cpp  LogManager.cpp  Logger.cpp
src/logging/tests/: CMakeLists.txt
src/math/: CMakeLists.txt  README.md
src/math/include/math/: Color.h  MatrixBase.h  Property.h  Vector2.h  Vector4.h
src/math/tests/: CMakeLists.txt  math.Vector2.cpp
(+96 files in other folders)
